[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yaradb-client"
version = "0.1.0"
authors = [
  { name="Tymofii Shchur Viktorovych", email="tymofiischur@gmail.com" },
]
description = "Official python client for YaraDB"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# --- Зависимости ---
dependencies = [
    "requests>=2.20.0" # Главная зависимость
]

[project.urls]
Homepage = "https://github.com/illusiOxd/yaradb-client-py" # Измени на URL твоего НОВОГО репозитория
Repository = "https://github.com/illusiOxd/yaradb" # Ссылка на репозиторий СЕРВЕРА